--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ html {
 	background-color:hsl(345, 78%, 82%);
 	border: .1rem dashed black;
 	box-shadow: 0 0 1rem 0;
+	    overflow: auto;
+
 }
 header {
 	height:25vh;
@@ -72,9 +74,9 @@ h1, h2 {
 }
 /*	input	*/
 #text {
-	margin-left: 5rem;
-	height:4.5rem;
-
+	width: 25vw;
+    margin-left: 1rem;
+    height: 3.5rem;
 }
 /*	button	*/
 button {
