--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,9 @@ html {
 }
 .contenair{
 	grid-column: 2;
-	grid-row: 1;
+	grid-row: 2;
 	height:auto;
-	width:35vw;
+	width:38vw;
 	background-color:hsl(345, 78%, 82%);
 	border: .1rem dashed black;
 	box-shadow: 0 0 1rem 0;
@@ -53,12 +53,16 @@ html {
 
 }
 header {
-	height:25vh;
+	grid-column:1 / 4 ;
+	grid-row:1;
+	height:10vh;
+
 }
 footer{
 	grid-column:1/4;
 	grid-row:3;
 	height:25vh;
+
 }
 /*
 
@@ -74,7 +78,7 @@ h1, h2 {
 }
 /*	input	*/
 #text {
-	width: 25vw;
+    width: 25vw;
     margin-left: 1rem;
     height: 3.5rem;
 }
@@ -102,5 +106,5 @@ li, ul, button, #text{
 	cursor: pointer;
 }
 footer p{
-	margin-top:50vh;
+	margin-top:23vh;
 }
